--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcrypt": "^3.0.5",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^7.0.0",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "hbs": "^4.0.3",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "nodemon": "^1.18.10"
+    "multer": "^1.4.1",
+    "nodemon": "^1.18.10",
+    "pg": "^7.9.0",
+    "session-file-store": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "^5.15.3",
