--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-PGUSER={{your_uniqueid}}
+PGUSER=pengy6
 PGHOST=cse252.spikeshroud.com
-PGPASSWORD={{your_password}}
-PGDATABASE={{your_uniqueid}}_pizza
+PGPASSWORD=crafting14
+PGDATABASE=pengy6_pizza
 PGPORT=5432
